<?xml version="1.0" encoding="utf-8"?>
<<%= appPackage %>.screen.splash.SplashView xmlns:android="http://schemas.android.com/apk/res/android"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:background="@color/primary_light">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/splash"/>

    <RelativeLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/register_button"
            style="@style/AppTheme.Button.Flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/join"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/login_button"
            style="@style/AppTheme.Button.Flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>
    </RelativeLayout>

</<%= appPackage %>.screen.splash.SplashView>
