<?xml version="1.0" encoding="utf-8"?>
<<%= appPackage %>.screen.login.LoginView xmlns:android="http://schemas.android.com/apk/res/android"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/login_screen"/>

</<%= appPackage %>.screen.login.LoginView>
