<?xml version="1.0" encoding="utf-8"?>
<<%= appPackage %>.screen.register.RegisterView xmlns:android="http://schemas.android.com/apk/res/android"
                                                      android:layout_width="match_parent"
                                                      android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/registration_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_alignParentTop="true"
    android:orientation="vertical">

...
